# Game

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml
game/: Cargo.toml
game/render/: Cargo.toml
game/render/src/: lib.rs
game/src/: bitmap.rs  camera.rs  file.rs  game.rs  lib.rs  render.rs  tilemap.rs  vector.rs
game/src/game/: tilemap.rs
game/src/geom/: aabb.rs  matrix.rs  mod.rs  num.rs  vector.rs
game/src/render/: bitmap.rs  canvas_info.rs  color.rs  screen_info.rs  text.rs
game/utils/: Cargo.toml
game/utils/src/: lib.rs
platform/: Cargo.toml
platform-internal/: Cargo.toml
platform-internal/src/: lib.rs  window.rs
platform/src/: debug.rs  file.rs  graphics.rs  input.rs  lib.rs  memory.rs  time.rs  window.rs
src/: main.rs  window.rs
utils/: Cargo.toml
utils/src/: lib.rs  tests.rs
