[package]
name = "platform-internal"
version = "0.1.0"
authors = ["SamokhinIlya <samokhin.ilya.97@gmail.com>"]
edition = "2018"

[dependencies]
[dependencies.winapi]
version = "0.3.6"
features = [
    "winuser",
    "libloaderapi",
    "wingdi",
    "heapapi",
    "errhandlingapi",
    "winbase",
    "profileapi",
    "handleapi",
]
[dependencies.platform]
path = "../platform"