[package]
name = "platform"
version = "0.1.0"
authors = ["SamokhinIlya <samokhin.ilya.97@gmail.com>"]
edition = "2018"

[dependencies.lazy_static]
version = "1.3.0"

[dependencies.winapi]
version = "0.3.7"
features = [
    "winuser",
    "libloaderapi",
    "wingdi",
    "heapapi",
    "errhandlingapi",
    "winbase",
    "profileapi",
    "handleapi",
]

[dependencies.utils]
path = "../utils"